# django-simple-nav

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  RELEASING.md  noxfile.py  pyproject.toml
.copier/: package.yml
.copier-answers/: pre-commit.yml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
docs/: conf.py  getting-started.md  index.md  usage.md
docs/_static/css/: custom.css
docs/development/: contributing.md  just.md  releasing.md
example/: demo.py  navigation.py
example/templates/: base.html  basic.html  bootstrap4.html  bootstrap5.html  extra_context.html  nested.html  permissions.html  picocss.html  tailwind.html
example/templates/navs/: basic.html  bootstrap4.html  bootstrap5.html  example_list.html  extra_context.html  nested.html  picocss.html  tailwind_main.html  tailwind_profile.html
src/django_simple_nav/: __init__.py  _templates.py  _type_utils.py  _typing.py  apps.py  conf.py  exceptions.py  nav.py  permissions.py
src/django_simple_nav/jinja2/: django_simple_nav.py
src/django_simple_nav/templatetags/: django_simple_nav.py  django_simple_nav_tags.py  simple_nav_tags.py
src/simple_nav/: apps.py  conf.py  nav.py
tests/: conftest.py  navs.py  settings.py  test_conf.py  test_jinja.py  test_nav.py  test_navgroup.py  test_navitem.py  test_permissions.py  test_templates.py  test_templatetags.py  test_version.py  urls.py  utils.py
tests/jinja2/: environment.py
tests/jinja2/tests/: dummy_nav.html
tests/templates/tests/: alternate.html  dummy_nav.html  test_nav.html
tests/templates/tests/jinja2/: dummy_nav.html
